fix: correct REF-002 seed status and modernise mock repositories
- Fix REF-002 seed status from APPROVED to COMPLETED to match valid
  domain values defined in CLAUDE.md
- Replace wildcard imports with explicit imports in all three mock repos
- Replace Collectors.toList() with Stream.toList() (Java 16+)
- Extract ELECTRONICS_CATEGORY constant in MockProductRepository